# uuagd

./: README.md
haskell/uuagd/: README  uuagd.cabal
haskell/uuagd/examples/: Example5  Example5.ag  Example5.hs  Example5.html  Example5.sh
haskell/uuagd/resources/: template.html
haskell/uuagd/src/: Main.hs
haskell/uuagd/src/UUAGD/: CodeGen.hs  Embed.hs  Heredoc.hs  Html.hs
haskell/uuagd/src/UUAGD/Html/: CodeGen.hs  Renderer.hs  TreeEmbed.hs
java/: .gitignore
java/uuagd/: .classpath  .project  build.gradle  gradle.properties
java/uuagd/src/main/java/: Main.java
java/uuagd/src/main/java/ag/: AttrCode.java  AttrDef.java  AttrId.java  AttrKind.java  AttrUsage.java  AttrUsageFactory.java  CodeGen.java  DumpInfoGatherer.java  GrammarInfo.java  Preprocessor.java  PrettyInfoGatherer.java  PrettyListener.java  Settings.java  Types.java  TypesFactory.java
java/uuagd/src/main/java/ag/embed/: Embed.java
java/uuagd/src/main/java/parser/args/: CmdArgsLexer.java  CmdArgsLexer.tokens
java/uuagd/src/main/java/parser/dump/: DumpAGLexer.java  DumpAGLexer.tokens  DumpAGParser.java  DumpAGParser.tokens  DumpAGParserBaseListener.java  DumpAGParserListener.java
java/uuagd/src/main/java/parser/pretty/: PrettyAGLexer.java  PrettyAGLexer.tokens  PrettyAGParser.java  PrettyAGParser.tokens  PrettyAGParserBaseListener.java  (+1 more)
java/uuagd/src/main/java/util/: Cmd.java  Files.java  ReplaceCallback.java  Strings.java  TestLexer.java  TestParser.java  Value.java
java/uuagd/src/main/resources/grammars/: DumpAGLexer.g4  DumpAGParser.g4  PrettyAGLexer.g4  RewriteAGLexer.g4
(+2 files in other folders)
