name:          uuagd
version:       0.1.0.3
synopsis:      A debugger for the UUAG system.
homepage:      https://github.com/matthijssteen/uuagd
license:       OtherLicense
license-file:  LICENSE
author:        Matthijs Steen <matthijssteen1990@gmail.com>
maintainer:    Matthijs Steen <matthijssteen1990@gmail.com>
category:      Development
stability:     Experimental
build-type:    Simple
cabal-version: >= 1.8
data-files:
  resources/template.html
  resources/uuagd-1.0.3.jar

library
  build-depends:
    base >= 4 && < 5,
    blaze-html >= 0.7
  hs-source-dirs: src
  exposed-modules:
    Paths_uuagd,
    UUAGD.Embed,
    UUAGD.Html.Renderer,
    UUAGD.Html.TreeEmbed

executable uuagd
  build-depends:
    base >= 4 && < 5,
    process >= 1.2
  hs-source-dirs: src
  main-is: Main.hs